syntax = "proto3";

package cart;

option go_package = "github.com/adzi007/eccomerce-cart-service/proto";

service CoffeeShop {
    // rpc GetMenu(MenuRequest) returns (stream Menu) {}
    // rpc PlaceOrder(Order) returns (Receipt) {}
    rpc GetCartUser(CartRequest) returns (CartResponse) {}
}


message CartRequest {
    string id = 1;
}

message CartResponse {
    repeated CartItem data = 1;
}

message CartItem {
    uint64 id = 1;
    string name = 2;
    string slug = 3;
    uint64 price = 4;
    string stock = 5;
    ProductCategory category = 6;
}

message ProductCategory {
    name = 1;
    slug = 2;
}


// "id": 5,
// "name": "sayur brokoli",
// "slug": "indomie-kari-original-240g",
// "price": 2200,
// "stock": 14,
// "category": {
//     "name": "Sayuran",
//     "slug": "sayuran"
// }